--- a/url-scrapper-settings.ui
+++ b/url-scrapper-settings.ui
@@ -81,6 +81,30 @@
 		              <property name="homogeneous">True</property>
 		            </packing>
 		          </child>
+              <child>
+		            <object class="GtkToolButton" id="tree-toolbutton-go-up">
+		              <property name="visible">True</property>
+		              <property name="can_focus">False</property>
+		              <property name="use_action_appearance">False</property>
+		              <property name="icon_name">go-up-symbolic</property>
+		            </object>
+		            <packing>
+		              <property name="expand">False</property>
+		              <property name="homogeneous">True</property>
+		            </packing>
+		          </child>
+              <child>
+		            <object class="GtkToolButton" id="tree-toolbutton-go-down">
+		              <property name="visible">True</property>
+		              <property name="can_focus">False</property>
+		              <property name="use_action_appearance">False</property>
+		              <property name="icon_name">go-down-symbolic</property>
+		            </object>
+		            <packing>
+		              <property name="expand">False</property>
+		              <property name="homogeneous">True</property>
+		            </packing>
+		          </child>
 		        </object>
 		        <packing>
 		          <property name="top_attach">1</property>
